# dactyl-remote-control

./: .gitignore  Cargo.toml  dactyl-remote-control.service  flake.nix  reinstall.sh
src/: config.rs  hyprland.rs  i3.rs  keyboard.rs  main.rs
